@@ -9,6 +9,7 @@
 #define ME "main"
 #include "mpg123app.h"
 #include "mpg123.h"
+#include "out123.h"
 #include "local.h"
 
 #ifdef HAVE_SYS_WAIT_H
@@ -54,7 +55,6 @@ struct parameter param = {
   FALSE , /* shuffle */
   FALSE , /* remote */
   FALSE , /* remote to stderr */
-  DECODE_AUDIO , /* write samples to audio device */
   FALSE , /* silent operation */
   FALSE , /* xterm title on/off */
   0 ,     /* second level buffer size */
@@ -75,7 +75,6 @@ struct parameter param = {
 #ifdef HAVE_WINDOWS_H 
   0, /* win32 process priority */
 #endif
-  NULL,  /* wav,cdr,au Filename */
 	0, /* default is to play all titles in playlist */
 	NULL, /* no playlist per default */
 	0 /* condensed id3 per default */
@@ -108,7 +107,7 @@ struct parameter param = {
 	,0 /* force_utf8 */
 	,INDEX_SIZE
 	,NULL /* force_encoding */
-	,1. /* preload */
+	,0.2 /* preload */
 	,-1 /* preframes */
 	,-1 /* gain */
 	,NULL /* stream dump file */
@@ -124,7 +123,6 @@ char *prgName = NULL;
 char *equalfile = NULL;
 struct httpdata htd;
 int fresh = TRUE;
-int have_output = FALSE; /* If we are past the output init step. */
 FILE* aux_out = NULL; /* Output for interesting information, normally on stdout to be parseable. */
 
 size_t bufferblock = 0;
@@ -186,7 +184,10 @@ void safe_exit(int code)
 	if(param.term_ctrl)
 		term_restore();
 #endif
-	if(have_output) exit_output(ao, intflag);
+	if(intflag)
+		out123_drop(ao);
+	/* drains, closes */
+	out123_del(ao);
 
 	if(mh != NULL) mpg123_delete(mh);
 
@@ -206,12 +207,22 @@ void safe_exit(int code)
 	exit(code);
 }
 
-void check_fatal(int code)
+static void check_fatal(int code)
 {
 	if(code) safe_exit(code);
 }
 
-/* returns 1 if reset_audio needed instead */
+static void check_fatal_output(int code)
+{
+	if(code)
+	{
+		if(!param.quiet)
+			error2( "out123 error %i: %s"
+			,	out123_errcode(ao), out123_strerror(ao) );
+		safe_exit(code);
+	}
+}
+
 static void set_output_module( char *arg )
 {
 	unsigned int i;
@@ -280,67 +291,44 @@ static void set_quiet (char *arg)
 
 static void set_out_wav(char *arg)
 {
-	param.outmode = DECODE_WAV;
-	param.filename = arg;
+	param.output_module = "wav";
+	param.output_device = arg;
 }
 
 void set_out_cdr(char *arg)
 {
-	param.outmode = DECODE_CDR;
-	param.filename = arg;
+	param.output_module = "cdr";
+	param.output_device = arg;
 }
 
 void set_out_au(char *arg)
 {
-  param.outmode = DECODE_AU;
-  param.filename = arg;
+	param.output_module = "au";
+	param.output_device = arg;
+}
+
+void set_out_test(char *arg)
+{
+	param.output_module = "test";
+	param.output_device = NULL;
 }
 
 static void set_out_file(char *arg)
 {
-	param.outmode=DECODE_FILE;
-	#ifdef WIN32
-	#ifdef WANT_WIN32_UNICODE
-	wchar_t *argw = NULL;
-	OutputDescriptor = win32_utf8_wide(arg, &argw, NULL);
-	if(argw != NULL)
-	{
-		OutputDescriptor=_wopen(argw,_O_CREAT|_O_WRONLY|_O_BINARY|_O_TRUNC,0666);
-		free(argw);
-	}
-	#else
-	OutputDescriptor=_open(arg,_O_CREAT|_O_WRONLY|_O_BINARY|_O_TRUNC,0666);
-	#endif /*WANT_WIN32_UNICODE*/
-	#else /*WIN32*/
-	OutputDescriptor=open(arg,O_CREAT|O_WRONLY|O_TRUNC,0666);
-	#endif /*WIN32*/
-	if(OutputDescriptor==-1)
-	{
-		error2("Can't open %s for writing (%s).\n",arg,strerror(errno));
-		safe_exit(1);
-	}
+	param.output_module = "raw";
+	param.output_device = arg;
 }
 
 static void set_out_stdout(char *arg)
 {
-	param.outmode=DECODE_FILE;
-	param.remote_err=TRUE;
-	aux_out = stderr;
-	OutputDescriptor=STDOUT_FILENO;
-	#ifdef WIN32
-	_setmode(STDOUT_FILENO, _O_BINARY);
-	#endif
+	param.output_module = "raw";
+	param.output_device = NULL;
 }
 
 static void set_out_stdout1(char *arg)
 {
-	param.outmode=DECODE_AUDIOFILE;
-	param.remote_err=TRUE;
-	aux_out = stderr;
-	OutputDescriptor=STDOUT_FILENO;
-	#ifdef WIN32
-	_setmode(STDOUT_FILENO, _O_BINARY);
-	#endif
+	param.output_module = "raw";
+	param.output_device = NULL;
 }
 
 #if !defined (HAVE_SCHED_SETSCHEDULER) && !defined (HAVE_WINDOWS_H)
@@ -368,7 +356,7 @@ static void set_appflag(char *arg)
 	param.appflags |= appflag;
 }
 
-static void list_output_modules(void)
+static void list_output_modules(char *arg)
 {
 	char **names = NULL;
 	char **descr = NULL;
@@ -419,10 +407,9 @@ topt opts[] = {
 	{'k', "skip",        GLO_ARG | GLO_LONG, 0, &param.start_frame, 0},
 	{'2', "2to1",        GLO_INT,  0, &param.down_sample, 1},
 	{'4', "4to1",        GLO_INT,  0, &param.down_sample, 2},
-DECODE_TEST: handle that here, not in audio output!
-	{'t', "test",        GLO_INT,  0, &param.outmode, DECODE_TEST},
-	{'s', "stdout",      GLO_INT,  set_out_stdout, &param.outmode, DECODE_FILE},
-	{'S', "STDOUT",      GLO_INT,  set_out_stdout1, &param.outmode,DECODE_AUDIOFILE},
+	{'t', "test",        GLO_INT,  set_out_test, NULL, 0},
+	{'s', "stdout",      GLO_INT,  set_out_stdout,  NULL, 0},
+	{'S', "STDOUT",      GLO_INT,  set_out_stdout1, NULL, 0},
 	{'O', "outfile",     GLO_ARG | GLO_CHAR, set_out_file, NULL, 0},
 	{'c', "check",       GLO_INT,  0, &param.checkrange, TRUE},
 	{'v', "verbose",     0,        set_verbose, 0,           0},
@@ -662,8 +649,10 @@ int play_frame(void)
 		{
 			fresh = FALSE;
 		}
-		/* Normal flushing of data, includes buffer decoding. */
-		if(flush_output(ao, audio, bytes) < (int)bytes && !intflag)
+		/* Interrupt here doesn't necessarily interrupt out123_play().
+		   I wonder if that makes us miss errors. Actual issues should
+		   just be postponed. */
+		if(out123_play(ao, audio, bytes) < bytes && !intflag)
 		{
 			error("Deep trouble! Cannot flush to my output anymore!");
 			safe_exit(133);
@@ -695,7 +684,7 @@ int play_frame(void)
 			if(param.verbose > 2) fprintf(stderr, "\nNote: New output format %liHz %ich, format %i\n", rate, channels, format);
 
 			new_header = 1;
-			check_fatal(audio_reset(ao, rate, channels, format));
+			check_fatal_output(out123_start(ao, format, channels, rate));
 		}
 	}
 	if(new_header && !param.quiet)
@@ -877,13 +866,6 @@ int main(int sys_argc, char ** sys_argv)
 	/* Init audio as early as possible.
 	   If there is the buffer process to be spawned, it shouldn't carry the mpg123_handle with it. */
 	bufferblock = mpg123_safe_buffer(); /* Can call that before mpg123_init(), it's stateless. */
-	if(init_output(&ao) < 0)
-	{
-		error("Failed to initialize output, goodbye.");
-		mpg123_delete_pars(mp);
-		return 99; /* It's safe here... nothing nasty happened yet. */
-	}
-	have_output = TRUE;
 
 	/* ========================================================================================================= */
 	/* Enterning the leaking zone... we start messing with stuff here that should be taken care of when leaving. */
@@ -963,9 +945,6 @@ int main(int sys_argc, char ** sys_argv)
 	/* Prepare stream dumping, possibly replacing mpg123 reader. */
 	if(dump_open(mh) != 0) safe_exit(78);
 
-	/* Now either check caps myself or query buffer for that. */
-	audio_capabilities(ao, mh);
-
 	load_equalizer(mh);
 
 #ifdef HAVE_SETPRIORITY
@@ -995,6 +974,38 @@ int main(int sys_argc, char ** sys_argv)
 	/* argument "3" is equivalent to realtime priority class */
 	win32_set_priority( param.realtime ? 3 : param.w32_priority);
 #endif
+
+	/* TODO: There's some memory leaking on fatal safe_exits().
+	   This is a cosmetic issue, though. */
+
+
+	/* Initializing output after the priority stuff, might influence
+	   buffer process. */
+	ao = out123_new();
+	if(!ao)
+	{
+		if(!param.quiet)
+			error("Failed to allocate output.");
+		safe_exit(97);
+	}
+	if
+	( 0
+	||	out123_param(ao, OUT123_FLAGS, param.output_flags, 0.)
+	|| out123_param(ao, OUT123_PRELOAD, 0, param.preload)
+	|| out123_param(ao, OUT123_GAIN, param.gain, 0.)
+	|| out123_param(ao, OUT123_VERBOSE, param.verbose, 0.)
+	)
+	{
+		if(!param.quiet)
+			error("Error setting output parameters. Do you need a usage reminder?");
+		safe_exit(98);
+	}
+	check_fatal_output(out123_set_buffer(ao, param.usebuffer*1024));
+	check_fatal_output(out123_open( ao
+	,	param.output_module, param.output_device ));
+
+	/* Now either check caps myself or query buffer for that. */
+	audio_capabilities(ao, mh);
 
 	if(!param.remote) prepare_playlist(argc, argv);
 
@@ -1030,19 +1041,14 @@ int main(int sys_argc, char ** sys_argv)
 		}
 		if(param.delay > 0)
 		{
+			out123_drain(ao);
 			/* One should enable terminal control during that sleeping phase! */
 			if(param.verbose > 2) fprintf(stderr, "Note: pausing %i seconds before next track.\n", param.delay);
-			/* TODO: This is wrong here, I need closing/reopening the device, or a wrapper
-			   like audio_stop() and audio_start() that make sure current stuff is played
-			   and then operation halted. The calls audio_pause() and audio_unpause() should
-			   be for most immediate interruption and continuation. */
-			output_pause(ao);
 #ifdef WIN32
 			Sleep(param.delay*1000);
 #else
 			sleep(param.delay);
 #endif
-			output_unpause(ao);
 		}
 		if(!APPFLAG(MPG123APP_CONTINUE)) frames_left = param.frame_number;
 
@@ -1171,7 +1177,8 @@ int main(int sys_argc, char ** sys_argv)
 #endif
 		}
 
-	if(!param.smooth && param.usebuffer) audio_drain(ao);
+	if(!param.smooth)
+		out123_drain(ao);
 	if(param.verbose) print_stat(mh,0,ao); 
 
 	if(!param.quiet)
@@ -1195,20 +1202,12 @@ int main(int sys_argc, char ** sys_argv)
 
         intflag = FALSE;
 
-#ifndef NOXFERMEM
-        if(!param.smooth && param.usebuffer) audio_drop(ao);
-#endif
+		if(!param.smooth)
+			out123_drop(ao);
 	}
 
 		if(end_of_files) break;
 	} /* end of loop over input files */
-
-	/* Ensure we played everything. */
-	if(param.smooth && param.usebuffer)
-	{
-		audio_drain(ao);
-		audio_drop(ao); /* Braindead here; why was there a buffer_resync()? */
-	}
 
 	if(APPFLAG(MPG123APP_CONTINUE))
 	{
